Production build - Static site, not SSR (yet)

--- a/assets/styles/buttons.scss
+++ b/assets/styles/buttons.scss
@@ -5,6 +5,7 @@
     background-color: $colour-primary;
     color: #fff !important;
     padding: 0.65rem 1.8rem !important;
+    border: none;
     border-radius: 3px;
     transition: 0.4s all linear;
 
@@ -24,5 +25,11 @@
     &:hover {
         color: #fff !important;
         background-color: $colour-secondary;
+    }
+}
+
+.hover {
+    &:hover {
+        cursor: pointer;
     }
 }
