--- a/assets/styles/form.scss
+++ b/assets/styles/form.scss
@@ -16,22 +16,29 @@ form {
 
         &:focus, &:hover {
             outline: none;
+        }
+
+        &:hover {
+            border: 2px solid $colour-accent;
+        }
+
+        &:focus {
             border: 2px solid $colour-primary;
         }
     }
 
-    .form-input-group, textarea, span {
+    .form-input-group, span {
         margin: 1rem 1.5rem 1rem 0;
+    }
+
+    textarea {
+        margin: 1rem 0;
+        resize: none;
     }
 
     ::placeholder {
         opacity: 0.85;
         font-weight: 300;
-    }
-
-    .form-row {
-        display: flex;
-        justify-content: space-between;
     }
 
     .form-input-group {
